# bilibili-storytree

./: .gitignore  README.md  pyproject.toml
.github/workflows/: testpypi.yml
bilibili_storytree/: __init__.py  convertor.py  decode.js  gen_code.py  graph_nodes.py  graph_script.py  story_graph.py
tests/: test_graph_script.py  test_story_graph.py  test_storytree.py
